--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/os-js/osjs-preview-package/issues"
   },
-  "homepage": "https://github.com/os-js/osjs-preview-package#readme"
+  "homepage": "https://github.com/os-js/osjs-preview-package#readme",
+  "osjs": {
+    "type": "package"
+  }
 }
