--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osjs/preview-application",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "OS.js v3 Preview Application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -43,5 +43,24 @@
     "hyperapp": "^1.2.9",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "extends": "@osjs/eslint-config"
+  },
+  "babel": {
+    "presets": [
+      ["@babel/preset-env", {
+      }]
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
   }
 }
