--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "keywords": [
     "osjs"
   ],
-  "dependencies": {},
   "files": [
     "dist/",
     "metadata.json"
@@ -30,19 +29,12 @@
   "osjs": {
     "type": "package"
   },
+  "dependencies": {
+    "@osjs/gui": "^4.0.29",
+    "hyperapp": "^1.2.10"
+  },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/runtime": "^7.2.0",
-    "@osjs/eslint-config": "^1.0.0",
-    "@osjs/gui": "^4.0.20",
-    "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^5.12.0",
-    "hyperapp": "^1.2.9",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0"
+    "@osjs/dev-meta": "^1.0.2"
   },
   "eslintConfig": {
     "env": {
@@ -56,8 +48,10 @@
   },
   "babel": {
     "presets": [
-      ["@babel/preset-env", {
-      }]
+      [
+        "@babel/preset-env",
+        {}
+      ]
     ],
     "plugins": [
       "@babel/plugin-transform-runtime"
