--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@osjs/preview-application",
-  "version": "1.1.16",
-  "description": "OS.js v3 Preview Application",
+  "version": "1.1.17",
+  "description": "OS.js Preview Application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint *.js",
